objects/Learning__c.object
<CustomObject>
    <description>Created: Venkatesh S\Veeresh Alur 
Date: 15/11/2013 
Capablity: ES Offering 
Release: 1 
Description: Learning Board</description>
    <fields>
        <fullName>ClientFacing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClientFacing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Image_Name__c</fullName>
        <label>Default Image Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Id__c</fullName>
        <label>Doc Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExoURL__c</fullName>
        <label>ExoURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Practice_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharepointURL__c</fullName>
        <label>SharepointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Link or Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Learning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LE-{0000000000}</displayFormat>
        <label>Learning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DescriptionReq</fullName>
        <active>true</active>
        <description>To make Description as required</description>
        <errorConditionFormula>LEN( Description__c) ==0</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is Mandatory</errorMessage>
    </validationRules>
</CustomObject>